--- a/apps/gridz/app/templates/new_grid.html
+++ b/apps/gridz/app/templates/new_grid.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
 {% block body %}
-  <h1>New {{ schema.name }} Grid</h1>
+  <h1>New { schema.name } Grid</h1>
   <form action="{{ url_for('create_grid', schema_id=schema.id) }}" method=post>
     <h3>Describe Grid<h3>
     <dl>
       <dt>Name:</dt>
-      <dd><input type=text size=30 name=name></dd>
+      <dd id="grid_name_input"><input type=text size=30 name=name></dd>
       <dt>Description:</dt>
-      <dd><textarea name=description rows=5 cols=40></textarea></dd>
+      <dd id="grid_description_input"><textarea name=description rows=5 cols=40></textarea></dd>
     </dl>
 
     <h3>Define Grid Fields</h3>
@@ -15,21 +15,21 @@
     Queryable fields can be selected as data in queries. Filterable
     fields can be used in query where clauses
     </p>
-    <table>
+    <table id="grid_fields">
       <tr>
 	<th>Name</th>
 	<th>Queryable?</th>
 	<th>Filterable?</th>
       </tr>
       <tr>
-	<td><input type=text size=30 name=grid_field[0][name]></dd>
-	<td><input type=checkbox name=grid_field[0][is_attribute] value=1></td>
-    	<td><input type=checkbox name=grid_field[0][is_filter] value=1></td>
+	<td><input type=text size=30 name=grid_field_name[0]></dd>
+	<td><input type=checkbox name=grid_field_is_attribute[0] value=1></td>
+    	<td><input type=checkbox name=grid_field_is_filter[0] value=1></td>
       </tr>
       <tr>
-	<td><input type=text size=30 name=grid_field[1][name]></dd>
-	<td><input type=checkbox name=grid_field[1][is_attribute] value=1></td>
-    	<td><input type=checkbox name=grid_field[1][is_filter] value=1></td>
+	<td><input type=text size=30 name=grid_field_name[1]></dd>
+	<td><input type=checkbox name=grid_field_is_attribute[1] value=1></td>
+    	<td><input type=checkbox name=grid_field_is_filter[1] value=1></td>
       </tr>
     </table>
     <input type=submit value=Submit><a href="{{ url_for('gridz',schema_id=schema.id) }}">Cancel</a>
