--- a/apps/gridz/app/templates/layout.html
+++ b/apps/gridz/app/templates/layout.html
@@ -1,10 +1,16 @@
 <!doctype html>
-<title>Gridz</title>
-<div class=page>
-  <h1>Gridz</h1>
-  </div>
+<html>
+ <head>
+  <title>Gridz</title>
+ </head>
+ <body>
+  <div class=page>
+   <h1>Gridz</h1>
+    </div>
   {% for message in get_flashed_messages() %}
-    <div class=flash>{{ message }}</div>
+      <div class=flash>{{ message }}</div>
   {% endfor %}
-  {% block body %}{% endblock %}
-</div>
+    {% block body %}{% endblock %}
+  </div>
+ </body>
+</html>
