new_grid is now only seeded with one grid_field initially layout.html loads jquery for all pages new_grid.html loads add_grid_feild.js and provides the anchor for the user to click to add a new grid_field entry widget add_grid_field.js responds to clicks of a#new_grid_field to insert the new widget ALL TESTS PASS

--- a/apps/gridz/app/templates/layout.html
+++ b/apps/gridz/app/templates/layout.html
@@ -2,7 +2,9 @@
 <html>
  <head>
   <title>Gridz</title>
- </head>
+  <link rel="stylesheet" href="{{ url_for('static',filename='css/smoothness/jquery-ui-1.8.16.custom.css')}}" type="text/css"/>
+  <script src="{{ url_for('static', filename='js/jquery-1.7.min.js') }}"></script>
+</head>
  <body>
   <div class=page>
    <h1>Gridz</h1>
