--- a/apps/gridz/app/templates/new_grid.html
+++ b/apps/gridz/app/templates/new_grid.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
+  <script src="{{ url_for('static', filename='js/add_grid_field.js') }}"></script>
   <h1>New Schema {{ schema.name }} Grid</h1>
   <form action="{{ url_for('create_grid', schema_id=schema.id) }}" method=post>
     {{ form.hidden_tag() }}
@@ -17,8 +18,10 @@
     fields can be used in query where clauses
     </p>
     <ul id="grid_fields">
-	<li>{{ form.grid_form_fields[0] }}</li>
-	<li>{{ form.grid_form_fields[1] }}</li>
+      {% for grid_field in form.grid_form_fields %}
+	<li class="grid_field">{{ grid_field }}</li>
+      {% endfor %}
+	<li id="add_grid_field_target"><a id="add_grid_field" href="#">Add Field</a></li>
     </ul>
     {{ form.submit }}<a href="{{ url_for('gridz',schema_id=schema.id) }}">Cancel</a>
   </form>
