--- a/apps/gridz/app/templates/view_grid.html
+++ b/apps/gridz/app/templates/view_grid.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/slick.grid.css') }}" type="text/css"/>
   <link rel="stylesheet" href="{{ url_for('static',filename='css/smoothness/jquery-ui-1.8.16.custom.css')}}" type="text/css"/>
   <link rel="stylesheet" href="{{url_for('static',filename='css/examples.css') }}" type="text/css"/>
+</head>
 <body>
 <div id="myGrid" style="width:600px;height:500px;"></div>
 <script src="{{ url_for('static', filename='js/jquery-1.7.min.js') }}"></script>
