using instance variables better

--- a/apps/gridz/app/templates/grid.html
+++ b/apps/gridz/app/templates/grid.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-<h1>{{ schema.name }}<h1>
+<h1>{{ schema.name }}.{{ grid.name }}<h1>
 <h2>{{ grid.description|safe }}</h2>
 <h3>Filters</h3>
 <ul id="filters">
