--- a/apps/gridz/app/templates/gridz.html
+++ b/apps/gridz/app/templates/gridz.html
@@ -1,14 +1,14 @@
 {% extends "layout.html" %}
 {% block body %}
-    <h1>{{ schema.name }} Gridz</h2>
+    <h1>{{ schema['name'] }} Gridz</h2>
     <ul class=entries>
       {% for grid in grids %}
       <li>
-      <h2>{{ grid.name }}</h2> {{ grid.description|safe }}
-      <a href="{{ url_for('destroy_grid',schema_id=schema.id,id=grid.id) }}">Destroy</a>
-      <a href="{{ url_for('grid', schema_id=schema.id,id=grid.id) }}">Grid Fields</a>
+      <h2>{{ grid['name'] }}</h2> {{ grid['description']|safe }}
+      <a href="{{ url_for('destroy_grid',schema_id=schema['_id'],id=grid['_id']) }}">Destroy</a>
+      <a href="{{ url_for('grid', schema_id=schema['_id'],id=grid['_id']) }}">Grid Fields</a>
       </li>
       {% endfor %}
     </ul>
-    <a href="{{ url_for('new_grid',schema_id=schema.id) }}">New Grid</a>
+    <a href="{{ url_for('new_grid',schema_id=schema['_id']) }}">New Grid</a>
 {% endblock %}
