--- a/apps/gridz/app/templates/grid_data.html
+++ b/apps/gridz/app/templates/grid_data.html
@@ -7,37 +7,19 @@
   <link rel="stylesheet" href="{{ url_for('static',filename='css/smoothness/jquery-ui-1.8.16.custom.css')}}" type="text/css"/>
   <link rel="stylesheet" href="{{url_for('static',filename='css/examples.css') }}" type="text/css"/>
 <body>
+<h1>{{ schema['name'] }}/{{ grid['name'] }}</h1>
 <div id="myGrid" style="width:600px;height:500px;"></div>
 <script src="{{ url_for('static', filename='js/jquery-1.7.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jquery.event.drag-2.2.js') }}"></script>
 
 <script src="{{ url_for('static', filename='js/slick.core.js') }}"></script>
 <script src="{{ url_for('static', filename='js/slick.grid.js') }}"></script>
-
 <script>
-  var grid;
-  var columns = {{ columns|tojson|safe }};
-
   var options = {
     enableCellNavigation: true,
     enableColumnReorder: false
   };
-
-  $(function () {
-    var data = [];
-    for (var i = 0; i < 500; i++) {
-      data[i] = {
-        title: "Task " + i,
-        duration: "5 days",
-        percentComplete: Math.round(Math.random() * 100),
-        start: "01/01/2009",
-        finish: "01/05/2009",
-        effortDriven: (i % 5 == 0)
-      };
-    }
-
-    grid = new Slick.Grid("#myGrid", data, columns, options);
-  })
+  var grid = new Slick.Grid("#myGrid",{{ entries|safe }}, {{ columns|safe }}, options);
 </script>
 </body>
 </html>
