modified main:get_entry   - take 'application/json' content_type data as input and return json as output   - only populate the '_id' in the entries unless the type is specfied (needs work) modified test.py to pass the get_entry test modified gridview.js:   - act as a DataProvider to SlicGrid, e.g. getLength(), getItem(i), and getItemMetaData(i)   - use synchronous ajax requests to the application on its schema_id, grid_id, and options.uuids[i] to return the requested item via getItem(i) modified grid_data.html to use GridView as the DataProvider for its SlickGrid instance
ALL TESTS PASS
needs work on the rest of the REST interface to match how get_entry processes and returns json

--- a/apps/gridz/app/templates/grid_data.html
+++ b/apps/gridz/app/templates/grid_data.html
@@ -11,15 +11,20 @@
 <div id="myGrid" style="width:600px;height:500px;"></div>
 <script src="{{ url_for('static', filename='js/jquery-1.7.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jquery.event.drag-2.2.js') }}"></script>
-
+<script src="{{ url_for('static', filename='js/gridview.js') }}"></script>
 <script src="{{ url_for('static', filename='js/slick.core.js') }}"></script>
 <script src="{{ url_for('static', filename='js/slick.grid.js') }}"></script>
 <script>
+  var gview = new GridView({
+    uuids: {{ entries|safe }},
+    schema_id: "{{ schema['_id']|safe }}",
+    grid_id: "{{ grid['_id']|safe }}"
+  });
   var options = {
     enableCellNavigation: true,
     enableColumnReorder: false
   };
-  var grid = new Slick.Grid("#myGrid",{{ entries|safe }}, {{ columns|safe }}, options);
+  var grid = new Slick.Grid("#myGrid",gview, {{ columns|safe }}, options);
 </script>
 </body>
 </html>
