grid is editable now. cells can be changed, and rows can be added No longer going to need separate view_data and edit_data paths. TODO:   allow rows to be removed   add custom editors and validators ALL TESTS PASS

--- a/apps/gridz/app/templates/grid.html
+++ b/apps/gridz/app/templates/grid.html
@@ -19,4 +19,5 @@
 <a href="{{ url_for('destroy_grid',schema_id=schema['_id'],id=grid['_id']) }}">Destroy</a>
 <a href="{{ url_for('gridz', schema_id=schema['_id']) }}">Gridz</a>
 <a href="{{ url_for('schemas') }}">Schemas</a>
+<a href="{{ url_for('view_data', schema_id=schema['_id'],id=grid['_id']) }}">Grid Data</a>
 {% endblock %}
