--- a/apps/gridz/app/static/css/examples.css
+++ b/apps/gridz/app/static/css/examples.css
@@ -25,15 +25,19 @@ ul {
 li {
   background: url("images/arrow_right_spearmint.png") no-repeat center left;
   padding: 0 0 0 14px;
-
   list-style: none;
   margin: 0;
 }
 
 #myGrid {
-  background: white;
-  outline: 0;
-  border: 1px solid gray;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: white;
+    outline: 0;
+    border: 1px solid gray;
 }
 
 .grid-header {
