grids are nested inside schemas grid allows_nested_attributes_for grid_fields, with destroy also grids_controller_test tests ability to update, add, and destroy grid_fields   on update grids_controller passes its tests ALL TESTS PASS

--- a/apps/rgrids/app/views/grids/_form.html.erb
+++ b/apps/rgrids/app/views/grids/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@grid) do |f| %>
+<%= form_for([@schema, @grid]) do |f| %>
   <% if @grid.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@grid.errors.count, "error") %> prohibited this grid from being saved:</h2>
