--- a/apps/rgrids/app/views/grids/show.html.erb
+++ b/apps/rgrids/app/views/grids/show.html.erb
@@ -10,5 +10,5 @@
   <%= @grid.description %>
 </p>
 
-<%= link_to 'Edit', edit_grid_path(@grid) %> |
-<%= link_to 'Back', grids_path %>
+<%= link_to 'Edit', edit_schema_grid_path(@schema,@grid) %> |
+<%= link_to 'Back', schema_grids_path(@schema) %>
