--- a/apps/rgrids/app/views/grids/edit.html.erb
+++ b/apps/rgrids/app/views/grids/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @grid %> |
-<%= link_to 'Back', grids_path %>
+<%= link_to 'Show', [@schema, @grid] %> |
+<%= link_to 'Back', schema_grids_path(@schema) %>
